Search console tag scroller fix on IOS/Safari Removed bubble orientation detection Max height on detail preview items IOS fix search bar no longer pushes search and close down Image height changes for widths.

--- a/src/styles/components/detailPreview.scss
+++ b/src/styles/components/detailPreview.scss
@@ -13,7 +13,19 @@
 
   picture {
     height: 70vh;
+    max-height: 500px;
     display: block;
+    // iPad Pro
+    @media only screen
+    and (min-device-width: 768px)
+    and (max-device-width: 1024px)
+    and (orientation: portrait)
+    and (-webkit-min-device-pixel-ratio: 2) {
+      max-height: 400px;
+    }
+    @media only screen and (min-height: 2000px) {
+      max-height: 400px;
+    }
     img {
       object-fit: cover;
       height: 100%;
