--- a/src/styles/components/search/searchConsole.scss
+++ b/src/styles/components/search/searchConsole.scss
@@ -274,6 +274,9 @@
           height: 60px;
           .inputwrapper {
             height: 100%;
+            &.ios {
+              max-width: 75%;
+            }
           }
         }
         .margin {
@@ -348,6 +351,12 @@
           transform:translateX(100vw);
           /* Apply animation to this element */
           animation: marquee 80s linear infinite;
+
+          &.safari {
+            @media screen and (max-width: 768px) {
+              animation: marquee 30s linear infinite;
+            }
+          }
 
           span {
             padding: 3px 5px 5px;
